--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Alex Smith</h1>
+      <h1>Daniela Santander</h1>
       <p>I'm <span class="typed" data-typed-items="Economist, Consultant, Data Scientist"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -131,7 +131,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>These facts resumes my work and academic experience</p>
         </div>
 
         <div class="row no-gutters">
